backend/Antlr/scenarioParser.js
// Generated from scenario.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import scenarioListener from './scenarioListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class scenarioParser extends antlr4.Parser {

    static grammarFileName = "scenario.g4";
    static literalNames = [ null, "' '", "'\\t'", "'navigation'", "'avurnav'", 
                            "'pilotchart'", "'NAC'", "'1'", "'2'", "'3'", 
                            "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", "'10'", 
                            "'11'", "'12'", "'move'", "'flyTo'", "'camera'", 
                            "'ship'", "'bbox'", "'layer'", "'oceanography'", 
                            "'tides'", "'type'", "'oceanogram'", "'currents'", 
                            "'tidalAtlas'", "'2D'", "'max'", "'3D'", "'fromveur'", 
                            "'surface'", "'midle'", "'bottom'", "'manche'", 
                            "'iroise'", "'forecast'", "'static'", "'dynamic'", 
                            "'bathymetry'", "'emodnet'", "'gebco'", "'homonim'", 
                            "'sonar'", "'litto3D'", "'saint-barthelemy'", 
                            "'saint-martin'", "'guadeloupe'", "'finistere'", 
                            "'languedoc-roussillon'", "'provence'", "'eparses'", 
                            "'mayotte'", "'reunion'", "'normandie'", "'bretagne'", 
                            "'morbihan'", "'rance'", "'corse'", null, null, 
                            "','", null, null, null, null, "'*'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, "EMPTY_LINE", 
                             "CONTENT", "SEP", "SIGN", "NUMBER", "WORD", 
                             "WS", "STAR", "NL" ];
    static ruleNames = [ "scenario", "comment", "command", "navigation", 
                         "pilotchart", "move", "moveType", "flyTo", "mobile", 
                         "camera", "ship", "bbox", "layer", "oceanography", 
                         "tides", "currents", "tidalAtlas", "oceano2D", 
                         "oceano3D", "fromveur", "manche", "iroise", "forecast", 
                         "bathymetry", "sonar", "litto3D" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = scenarioParser.ruleNames;
        this.literalNames = scenarioParser.literalNames;
        this.symbolicNames = scenarioParser.symbolicNames;
    }



	scenario() {
	    let localctx = new ScenarioContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, scenarioParser.RULE_scenario);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1 || _la===2 || _la===64) {
	            this.state = 52;
	            this.comment();
	            this.state = 57;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 62;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===63 || _la===70) {
	            this.state = 60;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 70:
	                this.state = 58;
	                this.command();
	                break;
	            case 63:
	                this.state = 59;
	                this.match(scenarioParser.EMPTY_LINE);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 64;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 65;
	        this.match(scenarioParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, scenarioParser.RULE_comment);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1 || _la===2) {
	            this.state = 67;
	            _la = this._input.LA(1);
	            if(!(_la===1 || _la===2)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 72;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 73;
	        this.match(scenarioParser.CONTENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, scenarioParser.RULE_command);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this.match(scenarioParser.STAR);
	        this.state = 79;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1 || _la===2) {
	            this.state = 76;
	            _la = this._input.LA(1);
	            if(!(_la===1 || _la===2)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 81;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 86;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 23:
	            this.state = 82;
	            this.bbox();
	            break;
	        case 24:
	            this.state = 83;
	            this.layer();
	            break;
	        case 19:
	            this.state = 84;
	            this.move();
	            break;
	        case 3:
	            this.state = 85;
	            this.navigation();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	navigation() {
	    let localctx = new NavigationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, scenarioParser.RULE_navigation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(scenarioParser.T__2);
	        this.state = 89;
	        this.match(scenarioParser.SEP);
	        this.state = 92;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.state = 90;
	            this.pilotchart();
	            break;
	        case 4:
	            this.state = 91;
	            this.match(scenarioParser.T__3);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pilotchart() {
	    let localctx = new PilotchartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, scenarioParser.RULE_pilotchart);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(scenarioParser.T__4);
	        this.state = 95;
	        this.match(scenarioParser.SEP);
	        this.state = 96;
	        this.match(scenarioParser.T__5);
	        this.state = 97;
	        this.match(scenarioParser.SEP);
	        this.state = 98;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 524160) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	move() {
	    let localctx = new MoveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, scenarioParser.RULE_move);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this.match(scenarioParser.T__18);
	        this.state = 101;
	        this.match(scenarioParser.SEP);
	        this.state = 102;
	        this.moveType();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moveType() {
	    let localctx = new MoveTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, scenarioParser.RULE_moveType);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.flyTo();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	flyTo() {
	    let localctx = new FlyToContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, scenarioParser.RULE_flyTo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.match(scenarioParser.T__19);
	        this.state = 107;
	        this.match(scenarioParser.SEP);
	        this.state = 108;
	        this.mobile();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mobile() {
	    let localctx = new MobileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, scenarioParser.RULE_mobile);
	    try {
	        this.state = 112;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 21:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 110;
	            this.camera();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 111;
	            this.ship();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	camera() {
	    let localctx = new CameraContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, scenarioParser.RULE_camera);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(scenarioParser.T__20);
	        this.state = 115;
	        this.match(scenarioParser.SEP);
	        this.state = 116;
	        this.match(scenarioParser.NUMBER);
	        this.state = 117;
	        this.match(scenarioParser.SEP);
	        this.state = 118;
	        this.match(scenarioParser.NUMBER);
	        this.state = 119;
	        this.match(scenarioParser.SEP);
	        this.state = 120;
	        this.match(scenarioParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ship() {
	    let localctx = new ShipContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, scenarioParser.RULE_ship);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(scenarioParser.T__21);
	        this.state = 123;
	        this.match(scenarioParser.SEP);
	        this.state = 124;
	        this.match(scenarioParser.NUMBER);
	        this.state = 125;
	        this.match(scenarioParser.SEP);
	        this.state = 126;
	        this.match(scenarioParser.NUMBER);
	        this.state = 127;
	        this.match(scenarioParser.SEP);
	        this.state = 128;
	        this.match(scenarioParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bbox() {
	    let localctx = new BboxContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, scenarioParser.RULE_bbox);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.match(scenarioParser.T__22);
	        this.state = 131;
	        this.match(scenarioParser.SEP);
	        this.state = 132;
	        this.match(scenarioParser.NUMBER);
	        this.state = 133;
	        this.match(scenarioParser.SEP);
	        this.state = 134;
	        this.match(scenarioParser.NUMBER);
	        this.state = 135;
	        this.match(scenarioParser.SEP);
	        this.state = 136;
	        this.match(scenarioParser.NUMBER);
	        this.state = 137;
	        this.match(scenarioParser.SEP);
	        this.state = 138;
	        this.match(scenarioParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	layer() {
	    let localctx = new LayerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, scenarioParser.RULE_layer);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140;
	        this.match(scenarioParser.T__23);
	        this.state = 141;
	        this.match(scenarioParser.SEP);
	        this.state = 144;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 43:
	            this.state = 142;
	            this.bathymetry();
	            break;
	        case 25:
	            this.state = 143;
	            this.oceanography();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oceanography() {
	    let localctx = new OceanographyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, scenarioParser.RULE_oceanography);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this.match(scenarioParser.T__24);
	        this.state = 147;
	        this.match(scenarioParser.SEP);
	        this.state = 150;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 26:
	            this.state = 148;
	            this.tides();
	            break;
	        case 29:
	            this.state = 149;
	            this.currents();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tides() {
	    let localctx = new TidesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, scenarioParser.RULE_tides);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this.match(scenarioParser.T__25);
	        this.state = 153;
	        this.match(scenarioParser.SEP);
	        this.state = 154;
	        _la = this._input.LA(1);
	        if(!(_la===27 || _la===28)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	currents() {
	    let localctx = new CurrentsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, scenarioParser.RULE_currents);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156;
	        this.match(scenarioParser.T__28);
	        this.state = 157;
	        this.match(scenarioParser.SEP);
	        this.state = 160;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 30:
	            this.state = 158;
	            this.tidalAtlas();
	            break;
	        case 40:
	            this.state = 159;
	            this.forecast();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tidalAtlas() {
	    let localctx = new TidalAtlasContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, scenarioParser.RULE_tidalAtlas);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        this.match(scenarioParser.T__29);
	        this.state = 163;
	        this.match(scenarioParser.SEP);
	        this.state = 166;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 31:
	            this.state = 164;
	            this.oceano2D();
	            break;
	        case 33:
	            this.state = 165;
	            this.oceano3D();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oceano2D() {
	    let localctx = new Oceano2DContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, scenarioParser.RULE_oceano2D);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.match(scenarioParser.T__30);
	        this.state = 169;
	        this.match(scenarioParser.SEP);
	        this.state = 170;
	        this.match(scenarioParser.T__31);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oceano3D() {
	    let localctx = new Oceano3DContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, scenarioParser.RULE_oceano3D);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 172;
	        this.match(scenarioParser.T__32);
	        this.state = 173;
	        this.match(scenarioParser.SEP);
	        this.state = 177;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 38:
	            this.state = 174;
	            this.manche();
	            break;
	        case 34:
	            this.state = 175;
	            this.fromveur();
	            break;
	        case 39:
	            this.state = 176;
	            this.iroise();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fromveur() {
	    let localctx = new FromveurContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, scenarioParser.RULE_fromveur);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 179;
	        this.match(scenarioParser.T__33);
	        this.state = 180;
	        this.match(scenarioParser.SEP);
	        this.state = 181;
	        _la = this._input.LA(1);
	        if(!(((((_la - 35)) & ~0x1f) === 0 && ((1 << (_la - 35)) & 7) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	manche() {
	    let localctx = new MancheContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, scenarioParser.RULE_manche);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 183;
	        this.match(scenarioParser.T__37);
	        this.state = 184;
	        this.match(scenarioParser.SEP);
	        this.state = 185;
	        _la = this._input.LA(1);
	        if(!(((((_la - 35)) & ~0x1f) === 0 && ((1 << (_la - 35)) & 7) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	iroise() {
	    let localctx = new IroiseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, scenarioParser.RULE_iroise);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 187;
	        this.match(scenarioParser.T__38);
	        this.state = 188;
	        this.match(scenarioParser.SEP);
	        this.state = 189;
	        _la = this._input.LA(1);
	        if(!(((((_la - 35)) & ~0x1f) === 0 && ((1 << (_la - 35)) & 7) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	forecast() {
	    let localctx = new ForecastContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, scenarioParser.RULE_forecast);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this.match(scenarioParser.T__39);
	        this.state = 192;
	        this.match(scenarioParser.SEP);
	        this.state = 193;
	        _la = this._input.LA(1);
	        if(!(_la===41 || _la===42)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bathymetry() {
	    let localctx = new BathymetryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, scenarioParser.RULE_bathymetry);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 195;
	        this.match(scenarioParser.T__42);
	        this.state = 196;
	        this.match(scenarioParser.SEP);
	        this.state = 202;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 44:
	            this.state = 197;
	            this.match(scenarioParser.T__43);
	            break;
	        case 45:
	            this.state = 198;
	            this.match(scenarioParser.T__44);
	            break;
	        case 46:
	            this.state = 199;
	            this.match(scenarioParser.T__45);
	            break;
	        case 47:
	            this.state = 200;
	            this.sonar();
	            break;
	        case 48:
	            this.state = 201;
	            this.litto3D();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sonar() {
	    let localctx = new SonarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, scenarioParser.RULE_sonar);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 204;
	        this.match(scenarioParser.T__46);
	        this.state = 205;
	        this.match(scenarioParser.SEP);
	        this.state = 206;
	        this.match(scenarioParser.T__43);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	litto3D() {
	    let localctx = new Litto3DContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 50, scenarioParser.RULE_litto3D);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 208;
	        this.match(scenarioParser.T__47);
	        this.state = 209;
	        this.match(scenarioParser.SEP);
	        this.state = 210;
	        _la = this._input.LA(1);
	        if(!(((((_la - 34)) & ~0x1f) === 0 && ((1 << (_la - 34)) & 536838193) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}
